Bug 1971389 - Remove appearance: statusbar. r=#mac-reviewers
It's chrome and mac-only, and only used for the update elevation dialog
(which tbf I've never seen). You can test it with:

    let uri = "chrome://mozapps/content/update/updateElevation.xhtml";
    let features =
      "chrome,centerscreen,resizable=no,titlebar,toolbar=no,dialog=no";
    Services.ww.openWindow(null, uri, "Update:Elevation", features, null);

Differential Revision: https://phabricator.services.mozilla.com/D253218

--- a/toolkit/themes/osx/mozapps/update/updates.css
+++ b/toolkit/themes/osx/mozapps/update/updates.css
@@ -43,9 +43,10 @@
 
 #update-button-box {
   padding: 10px 12px 12px 12px;
-  appearance: auto;
-  -moz-default-appearance: statusbar;
   -moz-window-dragging: drag;
+  /* Not quite a sidebar, but in a sense an auxiliary toolbar */
+  border-top-color: 1px solid -moz-sidebarborder;
+  background-color: -moz-sidebar;
 }
 
 #update-button-box button {
